--- a/src/bio.html
+++ b/src/bio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Spellbovnd are a Seattle based quintet consisting of Alessandro DeCaro, Joe Giordano, Cristian Ordonez, Trevor Farthing and Kirk Roa.">
-    <meta property="og:title" content="SPELLBOVND"/>
+    <meta property="og:title" content="SPELLBOVND | Bio"/>
     <meta property="og:image" content="assets/imessage-preview.png"/>
     <title>SPELLBOVND | Bio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
