--- a/src/bio.html
+++ b/src/bio.html
@@ -24,7 +24,7 @@
     <div id="sidenav-menu" class="sidenav">
       <div class="sidenav-site-links">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html" class="sidenav-link home-nav-link">HOME</a>
+        <a href="/" class="sidenav-link home-nav-link">HOME</a>
         <a href="bio" class="sidenav-link bio-nav-link sidenav-selected-link">BIO</a>
         <a href="music" class="sidenav-link music-nav-link">MUSIC</a>
         <a href="shop" class="sidenav-link shop-nav-link">SHOP</a>
@@ -48,7 +48,7 @@
           <span class="mobile-nav-text float-right">
             SPELLBOVND
           </span>
-          <a href="index.html" class="nav-link ms-0 home-nav-link">HOME</a>
+          <a href="/" class="nav-link ms-0 home-nav-link">HOME</a>
           <a href="bio" class="nav-link bio-nav-link">[ BIO ]</a>
           <a href="music" class="nav-link music-nav-link">MUSIC</a>
           <a href="shop" class="nav-link shop-nav-link">SHOP</a>
@@ -62,10 +62,27 @@
         </nav>
       </header>
       <div>
-        <div class="absolute-center fade-standard w-100 text-center">
-          BIO COMING SOON
+        <div class="contain-block mb-5 fade-standard">
+          <div class="d-inline-block w-100 text-center ">
+            <h1 class="below-header bio-title d-inline-block">SPELLBOVND</h1>
+          </div>
+          <div class="flex-bio d-flex flex-wrap justify-content-around">
+
+            <img src="assets/group_bridge.jpg"/>
+            <div class="bio-text">
+              Spellbovnd are a Seattle based quintet consisting of Alessandro DeCaro, Joe Giordano, Cristian Ordonez, Trevor Farthing, and Kirk Roa.
+              The group cut their teeth for years in various different bands including the shoegaze outfit House of Blue Leaves and pop punk band Noches Nacht
+              before trading their sounds for something more immediate and timeless.  The result is a band who is not afraid to write massive pop hooks, while
+              coupling them with technicality and sincerity.  Spellbovnd is the brainchild of several collaborators who immersed themselves in glossy pop and trap music
+              while never forgetting their roots in punk and hardcore at the same time.  The duality that is Spellbovnd can be heard in their newest singles they have released
+              so far, with a full-length album to follow in the near future.
+            </div>
+            <div>
+            </div>
+            <img src="assets/group_trees.jpg" class="mt-5 bio-img-2"/>
+          </div>
         </div>
-        <footer class="fixed-footer fade-standard">
+        <footer class="fade-standard">
           <span class="footer-social-links">
             <a href="https://www.instagram.com/spellbovndmusic/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/spellbovnd/"><i class="fab fa-facebook"></i></a>
